--- a/.project
+++ b/.project
@@ -20,4 +20,11 @@
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.buildship.core.gradleprojectnature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>resources</name>
+			<type>2</type>
+			<location>C:/Users/shuby/Desktop/Projects/ecse223-project--group-10/src/resources</location>
+		</link>
+	</linkedResources>
 </projectDescription>
